test/integration/invalid-href/pages/index.js
// page used for loading and installing error catcher
export default function Page() {
  return <p>Hi ğŸ‘‹</p>
}
